--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.11",
+    "@mui/styled-engine": "^5.11.11",
     "@react-three/drei": "^9.57.0",
     "@react-three/fiber": "^8.11.7",
+    "history": "^5.3.0",
+    "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "three": "^0.150.1"
   },
   "devDependencies": {
