--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/styled-engine": "^5.11.11",
     "@react-three/drei": "^9.57.0",
     "@react-three/fiber": "^8.11.7",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.256",
     "history": "^5.3.0",
     "leva": "^0.9.34",
     "r3f-perf": "^7.1.2",
